manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "k8clus-e433"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "k8clus-e433"
  template:
    metadata:
      labels:
        app: "k8clus-e433"
    spec:
      containers:
        - name: "k8clus-e433"
          image: "halreg.azurecr.io/k8clus"
          ports:
          - containerPort: 80
