manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "k8clus-e433"
    labels:
        app: "k8clus-e433"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-k8clus-e433.457dbd1fcb514523acbf.australiaeast.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "k8clus-e433"
                servicePort: 80
